<?xml version="1.0" encoding="utf-8"?>

<!--
 - pasdroid - An open source implementation of Password Maker for the
 - Android platform, written in Java
 - 
 - Copyright (C) 2010 Devin Quirozoliver
 - http://arik181.github.com/pasdroid
 - http://github.com/arik181/pasdroid
 - http://passwordmaker.org/
 -
 - This library is free software; you can redistribute it and/or modify it
 - under the terms of the GNU Lesser General Public License as published by
 - the Free Software Foundation; either version 2.1 of the License, or (at
 - your option) any later version.
 -  
 - This library is distributed in the hope that it will be useful, but WITHOUT
 - ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 - FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License
 - for more details.
 - 
 - You should have received a copy of the GNU Lesser General Public License
 - along with this library; if not, write to the Free Software Foundation,
 - Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 - 
 - Written by Devin Quirozoliver <arik181@hotmail.com>
 - 
 - Original Command Line Client Written by Miquel Burns 
 - <miquelfire@gmail.com> and Eric H. Jung
-->

<resources>
    <string name="app_name">pasdroid</string>
	<string name="password_label">Password:</string>
	<string name="password"></string>
	<string name="confirmation_label">Confirmation:</string>
	<string name="confirmation"></string>
	<string name="save_password_label">Save Password:</string>
	<string name="save_password_prompt">Save Password</string>
	<string name="use_profile_label">Use Profile:</string>
	<string name="use_profile">Default</string>
	<string name="used_text_label">Used Text:</string>
	<string name="used_text"></string>
	<string name="generated_password_label">Generated Password:</string>
	<string name="generated_password"></string>
	<string name="copy_button">Copy Password</string>
	<string name="generate_button">Show Password</string>

<string name="options_menu_label">Options</string>
<string-array name="save_password_array">
	
	<item>On Disk</item>
	<item>Never</item>
</string-array>

<string name="hide_button">Hide Password</string>
<string name="master_pass"></string>
</resources>
